# helm

./: CLAUDE.md  Cargo.toml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/commands/gsd/: add-backlog.md  add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  debug.md  discuss-phase.md  do.md  execute-phase.md  fast.md  forensics.md  health.md  help.md  insert-phase.md  list-phase-assumptions.md  (+35 more)
.codex/: config.toml  gsd-file-manifest.json
.codex/agents/: gsd-debugger.md  gsd-debugger.toml  gsd-executor.md  gsd-executor.toml  gsd-phase-researcher.md  gsd-phase-researcher.toml  gsd-plan-checker.md  gsd-plan-checker.toml  gsd-planner.md  gsd-planner.toml  gsd-project-researcher.md  gsd-project-researcher.toml  gsd-research-synthesizer.md  gsd-research-synthesizer.toml  gsd-roadmapper.md  gsd-roadmapper.toml  gsd-ui-researcher.md  gsd-ui-researcher.toml  gsd-verifier.md  gsd-verifier.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: chat.rs  main.rs  plan.rs  provider.rs  sidebar.rs  text_input.rs  theme.rs  workspace.rs
(+181 files in other folders)
